--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <main id="main-content">
                 
                 <h2>About Me</h2>
-                <p>Olá meu nome e Patrick Thiago Martins Beltrão, eu sou um desenvolvedor de aplicações Web, trabalho com desenvolvimento de Sites, Portífolios,
-                    Blogs entre outros. Trabalhando sempre com compromisso com o cliente, tranzendo ao mesmo uma experiência unica e inovadora para que possam realizar os seus sonhos.
+                <p>Olá meu nome e <strong>Patrick Thiago Martins Beltrão</strong> , eu sou um desenvolvedor de aplicações Web, trabalho com desenvolvimento de Sites, Portífolios,
+                    Blogs entre outros. Trabalhando sempre com compromisso com o cliente, trazendo ao mesmo uma experiência unica e inovadora para que possa realizar os seus sonhos.
                 </p>
 
                 <img id="img-main" src="./image/work-731198_640.jpg" alt="">
