inserindo novas imagens

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
 
                     <div class="div-sec-two">
 
-                    <h2>Contact</h2>
+                        <h2>Contact</h2>
 
-                    <img id="img-main2" src="./image/internet-3563638_1280.jpg" alt="">
-                    <img class="icons1-two" src="./icons/whatsapp.svg" alt="Icone do whatsapp">
+                        <p>Entre em contato e faça um orçamento.</p>
+
+                        <img id="img-main2" src="./image/internet-3563638_1280.jpg" alt="">
+                        <img class="icons1-two" src="./icons/whatsapp.svg" alt="Icone do whatsapp">
                     
-                    <tel>(62) 998112-6578</tel>
+                        <tel>(62) 998112-6578</tel>
 
                     </div>
 
