--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="nav-header">
 
                     <div class="title-nav "><p>Patrick Thiago Martins Beltrão</p></div>
-                    <div class="menu-nav "><a href="#main-content">About Me</a></div>
+                    <div class="menu-nav "><a href="#section-one">About Me</a></div>
                     <div class="menu-nav "><a href="#section-two">Contact</a></div>
                     <div class="menu-nav "><a href="#">Menu</a></div>
 
