--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <nav class="nav-header">
 
                     <div class="title-nav "><p>Patrick Thiago Martins Beltrão</p></div>
-                    <div class="menu-nav "><a href="#section-one">About Me</a></div>
+                    <div class="menu-nav "><a href="#">About Me</a></div>
                     <div class="menu-nav "><a href="#section-two">Contact</a></div>
-                    <div class="menu-nav "><a href="#">Menu</a></div>
+                    <div class="menu-nav "><a href="index.html">Menu</a></div>
 
                 </nav>
 
